# matecon

./: .gitignore  README.md  TODO.md  matecon.puml  matecon.spec  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
matecon/: __init__.py  __main__.py  gui.py  material.py  position.py  spreadsheet.py  spreadsheet_reader.py  strings.py  table.py  templates.py  utils.py
matecon/gui/: config.py  controller.py  file_card.py  file_card.qss  material_treeview.py  settings.py  toolbar.py  utils.py  view.py
matecon/gui/widgets/: elided_label.py
matecon/io/: excel_reader.py  io.py  spreadsheet_reader.py  workbook_reader.py
matecon/models/: book_container.py  booknode.py  excel_file.py  excel_file_set.py  material.py  position.py  sheetnode.py  spreadsheet.py  table.py  templates.py  types.py
matecon/utils/: collections.py  io.py
sample_data/: BOOK_SAMPLE.xlsx  GROUP_SAMPLE.txt  GROUP_SAMPLE.xlsx  HIDDEN_MATERIAL_SHEETS.xlsx  INVALID_MATERIAL_SHEETS.xlsx  MATERIAL_INVALID_SHEETS.xlsx  MATERIAL_SAMPLE_1+2.txt  MATERIAL_SAMPLE_1.txt  MATERIAL_SAMPLE_1.xlsx  MATERIAL_SAMPLE_2.xlsx  NO_MATERIAL_SHEETS.xlsx  book_sample.xlsx  group_sample.xlsx  hidden_material_sheets.xlsx  invalid_sheet.xlsx  material_data_1.xlsx  material_data_2.xlsx  no_material_sheets.xlsx
tests/: helpers.py  test_book_container.py  test_collections.py  test_excel_file.py  test_excel_file_set.py  test_excel_reader.py  test_excel_reader_booknode.py  test_excel_reader_sheetnode.py  test_material.py  test_material_format_line.py  test_position.py  test_spreadsheet.py  test_strings.py  test_table.py  test_templates.py
tests/io/: test_excel_reader.py  test_excel_reader_booknode.py  test_excel_reader_sheetnode.py  test_workbook_reader.py  test_workbook_reader_booknode.py  test_workbook_reader_sheetnode.py
tests/models/: test_book_container.py  test_excel_file.py  test_excel_file_set.py  test_material.py  test_material_format_line.py  test_position.py  test_templates.py
