[project]
name = "matecon"
version = "0.1.0"
description = "Excel to JIP-MATERIAL converter"
authors = [
    { name = "tamaohome", email = "85826245+tamaohome@users.noreply.github.com" }
]
dependencies = [
    "openpyxl>=3.1.2",
    "anytree>=2.12.1",
    "pyside6>=6.9.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0.1",
    "black>=24.2.0",
    "pyinstaller>=6.12.0",
    "commitizen>=4.8.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["matecon"]

[tool.black]
line-length = 110

[tool.pytest.ini_options]
addopts = "-s"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
