[project]
name = "matecon"
version = "0.1.0"
description = "Excel to JIP-MATERIAL converter"
authors = [
    { name = "tamaohome", email = "85826245+tamaohome@users.noreply.github.com" },
]
dependencies = ["openpyxl>=3.1.2", "anytree>=2.12.1", "pyside6>=6.9.0"]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[dependency-groups]
dev = ["pytest>=8.0.1", "ruff>=0.1.0", "pyinstaller>=6.12.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["matecon"]

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = [
    "E",   # Pycodestyle Errors (主にPEP 8の構文エラー)
    "W",   # Pycodestyle Warnings (主にPEP 8の警告、例えばインデントや空白に関するもの)
    "F",   # Pyflakes (未使用のインポートや変数のチェックなど)
    "I",   # Isort (インポート文のソートと整理)
    "N",   # Naming conventions (命名規則のチェック)
    "UP",  # pyupgrade (モダンなPythonの構文への書き換え推奨、例: f-stringsの使用)
    "B",   # bugbear (潜在的なバグや設計上の問題の指摘)
    "A",   # flake8-builtins (組み込み関数や組み込み型の上書きチェック)
    "TID", # flake8-tidy-imports (特定のインポートを禁止するなど、インポートの整理)
    "C4",  # flake8-comprehensions (冗長なリスト/セット/辞書内包表記の簡略化推奨)
    "SIM", # flake8-simplify (コードの簡略化と最適化の推奨)
]
ignore = [
    "N802", # Qtの命名規則（camelCase）を許容する
]

[tool.ruff.lint.isort]
known-first-party = ["matecon"]

[tool.pytest.ini_options]
addopts = "-s"
filterwarnings = ["ignore::DeprecationWarning"]
